Closed Bug 333635 Opened 18 years ago Closed 18 years ago

Popupmenus don't close properly

Categories

(Core :: Widget: Cocoa, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: hwaara, Assigned: hwaara)

References

Details

Attachments

(1 file)

If you click on a popupmenu (for example "Latest headlines" on the bookmark toolbar), and then click on it again, it doesn't close.
Attached patch FixSplinter Review
The fix is to eat the event from gecko, if the click was outside the popup. If we don't - a click on a popupmenu means it will re-open.  This is also what the old carbon impl does.
Attachment #218092 - Flags: review?(joshmoz)
Blocks: cocoa
Comment on attachment 218092 [details] [diff] [review]
Fix

Change "rolledUpMenu" to something like "popupRollupCalled" (popups, not menus, is the better terminology)

Otherwise looks good.
Attachment #218092 - Flags: review?(joshmoz) → review+
Fixed on the trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: