Fix bug 333635, Popupmenus don't close properly. r=josh